# mres-code

./: .gitignore  LICENSE  pyproject.toml
notebooks/: disorder_against_tau.ipynb  disorder_against_tau.ju.py  dump.ju.py  final_graphs.ipynb  final_graphs.ju.py  rwa_investigation.ipynb  rwa_investigation.ju.py  wv_decoherence.ju.py  wv_dephasing.ju.py  wv_disorder.ipynb  wv_disorder.ju.py
notebooks/.ipynb_checkpoints/: wv_disorder-checkpoint.ipynb
scripts/: plot_bcf.py  plot_dephasing_deco.py  plot_gamma_limits.py  plot_spectral_density.py  plot_zeta.py
src/mres/: __init__.py  bathevo.py  bvevo.py  fieldquads.py  paramprep.py  plot.py  weakvalues.py  wvformulas.py
src/mres/pipelines/: __init__.py  decoherence.py  dephasing.py  disorder.py  pipeline.py
