[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mres"
authors = [{name = "Taliah Horner", email = "taliahhorner@protonmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies=[
    "matplotlib",
    "numpy"
]
